src/app/main/dashboard/dashboard.component.scss
@import '../../_variables';

.table-wrapper {
    margin-bottom: 2em;
    max-height: 400px;
    overflow-x: hidden;
    overflow-y: auto;
    padding: 0;
    transition: max-height ease-in 0.5s;

    &.loading {
        max-height: 100px;
    }
}

.table {
    border-left: 2px solid;
    margin-bottom: 0;

    td {
        white-space: nowrap;
    }

    th {
        border-bottom: 0;
    }
}

.loading-row {
    display: none;

    th {
        padding: 0;
    }

    .loading & {
        display: table-row;
    }
}

.table-title {
    font-size: $font-size-h5;
}

.most-loyal {
    border-left-color: $blue;
}

.most-influential {
    border-left-color: $orange;
}

